--- a/css/style.css
+++ b/css/style.css
@@ -366,8 +366,16 @@ footer {
   align-items: flex-start;
   background-color: gray;
 }
+footer .business-hours {
+  width: 100%;
+}
 footer .business-hours .row {
   display: flex;
+  justify-content: space-between;
+}
+footer .business-hours .line-break {
+  width: 100%;
+  height: 30px;
 }
 footer .contact-details {
   display: flex;
