--- a/style.scss
+++ b/style.scss
@@ -440,14 +440,22 @@ footer {
   align-items: flex-start;
   background-color: gray;
   .business-hours {
+    width: 100%;
     .row {
       display: flex;
+      justify-content: space-between;
+    }
+    .line-break {
+      width: 100%;
+      height: 30px;
     }
   }
   .contact-details {
     display: flex;
     width: 100%;
     justify-content: space-between;
+
+    
   }
   .line {
     width: 100%;
