--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ main #banner {
           align-items: center;
   width: 100%;
   padding: 70px 0 180px 0;
-  background: url(../images/banner/Banner.jpg) no-repeat;
+  background: url(./images/banner/Banner.jpg) no-repeat;
   background-size: cover;
   background-position: bottom;
 }
@@ -112,7 +112,7 @@ main #banner .logo {
   margin: 215px 0 70px 0;
   width: 280px;
   height: 240px;
-  background: url(../images/banner/logo/logo.svg) no-repeat;
+  background: url(./images/banner/logo/logo.svg) no-repeat;
   background-size: contain;
 }
 
@@ -251,7 +251,7 @@ main #environment .environment-img .large-img {
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 66%, 0% 100%);
           clip-path: polygon(0 0, 100% 0, 100% 66%, 0% 100%);
   border-radius: 10px;
-  background-image: url(../images/店家環境/shop03.JPG);
+  background-image: url(./images/店家環境/shop03.JPG);
   background-size: cover;
 }
 
@@ -294,7 +294,7 @@ main #environment .environment-img .small-img1 {
   left: 0;
   width: 60%;
   height: 430px;
-  background-image: url(../images/店家環境/shop02.JPG);
+  background-image: url(./images/店家環境/shop02.JPG);
   background-size: cover;
   background-position: right;
   -webkit-clip-path: polygon(0 22%, 91% 0, 100% 100%, 0% 100%);
@@ -341,7 +341,7 @@ main #environment .environment-img .small-img2 {
   bottom: 0px;
   width: 44%;
   height: 510px;
-  background-image: url(../images/店家環境/shop03.JPG);
+  background-image: url(./images/店家環境/shop03.JPG);
   background-size: cover;
   background-position: left;
   -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 12% 100%);
